package mecanicabase.flyweight;

public interface Flyweight {

    void operar(Object estadoExterno);
}
